--- a/docs/UFC.css
+++ b/docs/UFC.css
@@ -1,4 +1,5 @@
 body{
+    background-image:url(../Videos/mcgregor.gif);
     background-repeat: no-repeat;
     background-size: cover;
     text-align: center;
