--- a/docs/UFC.css
+++ b/docs/UFC.css
@@ -1,5 +1,5 @@
 body{
-    background-image:url(https://brucewayne68.github.io/UFC/Videos/mcgregor.gif);
+    background-image:url("Videos/mcgregor.gif");
     background-repeat: no-repeat;
     background-size: cover;
     text-align: center;
